description: Password empty input test
---
- expectVisible: "Sign In"
- tapOn: "Sign In"
- expectVisible: "Email"
- tapOn: "Email"
- inputText: "asriel@example.com"
- tapOn: "Sign In"
- expectVisible: "Password is required"
